fixed image padding on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,39 @@
 body {
     background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/cork-board.png");
 }
+
+.bold {
+    font-weight: bold;
+}
+
+.contact {
+    background: #e9ecef;
+    padding: 15px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.container {
+    padding-bottom: 2rem;
+}
+
+.font-40 {
+    font-size: 40px;
+    
+}
+
+.font-18 {
+    font-size: 18px;
+}
+
+.formInput {
+    margin-top: 5px;
+}
+
+.indent {
+    text-indent: 10px;
+}
+
 .jumbotron {
     background-color: #343a40;
     color: #e9ecef;
@@ -12,56 +45,34 @@ body {
     background-color: #343a40;
    
 }
-.container {
-    padding-bottom: 2rem;
+
+.line25 {
+    line-height: 25px;
 }
-.contact {
-    background: #e9ecef;
-    padding: 15px;
-    border: 1px solid black;
-    border-radius: 5px;
+
+.marginBottom {
+    margin-bottom: 10px;
 }
 
  .navbar-brand, .nav-link {
     color: #e9ecef !important;
 }
 
-.row .margin0 {
-    margin-left: 0;
-    margin-right: 0; 
-}
-.bold {
-    font-weight: bold;
-}
-.font-40 {
-    font-size: 40px;
-    
-}
-.line25 {
-    line-height: 25px;
-}
-
-.font-18 {
-    font-size: 18px;
-}
-.indent {
-    text-indent: 10px;
-}
-
 .padding-0 {
     padding: 0;
-}
-
-.text-center {
-    text-align: center;
 }
 
 .padding-15 {
     padding: 15px;
 }
 
-.marginBottom {
-    margin-bottom: 10px;
+.row .margin0 {
+    margin-left: 0;
+    margin-right: 0; 
+}
+
+.text-center {
+    text-align: center;
 }
 
 .tile {
@@ -76,13 +87,9 @@ body {
     max-width: 100%;
     border-radius: 5px;
 }
-.formInput {
-    margin-top: 5px;
-}
 
 #arrow {
-    max-width: 20%;
-   
+    max-width: 20%; 
     float: left;
     margin: auto;
 }
@@ -105,15 +112,15 @@ body {
     .row {
         margin: 0 auto;
     }
-    .container {
-       
-       
-    }
 
     .paddingTop-xs {
         padding-top: 2rem;
         padding-left: 0px;
         padding-right: 0px;
 
+    }
+
+    .col-xs-2 {
+        padding: 0px;
     }
 }
